styles.css
:root {
  --blue1: #1d3557;
  --blue2: #457b9d;
  --blue3: #a8dadc;
  --white: #f1faee;
  --red: #e63946;
  --search_form_height: 5rem;
  --search_field_width: min(350px, 40vw);
  --search_field_height: 1.5rem;
  --search_field_padding: 9px;
}
html,
body,
ul,
li {
  margin: 0;
  padding: 0;
  font-family: BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
    "Open Sans", "Helvetica Neue", sans-serif;
}
a {
  color: inherit;
  text-decoration: none;
}
.logo {
  font-weight: bold;
  font-size: 1.5rem;
}
header button.degree {
  border-radius: 6px;
  outline: none;
  border: none;
  width: 6rem;
  height: 2rem;
  font-size: 1.3rem;
  cursor: pointer;
}
.active-degree {
  color: var(--red);
  font-weight: 600;
}
.search-box {
  display: flex;
  flex-direction: column;
  position: relative;
}
.search-box .search-form {
  height: var(--search_form_height);
  display: flex;
  align-items: center;
}
.search-box .search-form * {
  padding: 0.6rem;
  outline: none;
  border: none;
  font-size: 1rem;
}
.search-box .search-form button {
  color: var(--white);
  font-size: 1.2rem;
}
#search-field {
  padding: var(--search_field_padding);
  height: var(--search_field_height);
  border-radius: 6px;
  background-color: var(--white);
  width: var(--search_field_width);
}
.search-box.active #search-field {
  border-radius: 6px 6px 0 0;
}
#search-btn {
  background: transparent;
  cursor: pointer;
  color: var(--white);
}
ul.suggestions {
  list-style: none;
  position: absolute;
  background-color: var(--blue2);
  top: calc(
    var(--search_form_height) -
      (
        (
            var(--search_form_height) -
              (var(--search_field_height) + 2 * var(--search_field_padding))
          ) / 2
      )
  );
  width: calc(var(--search_field_width) + 2 * var(--search_field_padding));
}
ul.suggestions li {
  padding: 0.4rem 0 0.4rem 0.6rem;
  cursor: pointer;
}
ul.suggestions li:hover {
  background-color: var(--blue3);
  color: var(--blue1);
}
header {
  background-color: var(--blue1);
  color: var(--white);
  display: grid;
  grid-template-columns: 1fr 3fr 1fr;
  align-items: center;
  justify-items: center;
}

/*  */
body {
  color: var(--blue1);
  display: grid;
  grid-template-rows: auto auto 1fr auto 1fr auto 3rem;
  align-items: start;
  font-size: 1.2rem;
}
body > * {
  margin-bottom: 1.2rem;
}
.flex-wrap {
  flex-wrap: wrap;
}
span {
  text-align: center;
}
footer {
  width: 100%;
  height: 100%;
  margin: 0;
  background-color: var(--blue1);
  color: var(--white);
}
.today {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}
.flex-row {
  display: flex;
  flex-direction: row;
  gap: 0.8rem;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-evenly;
}
.flex-column {
  display: flex;
  flex-direction: column;
  gap: 0.8rem;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
}
.temp .flex-column {
  gap: 0;
}
.big-number {
  font-size: 4rem;
}
.big-img img {
  height: 6rem;
  width: 6rem;
}
.sml-img img {
  height: 2rem;
  width: 2rem;
}

.days-selection > div {
  cursor: pointer;
  padding: 1rem;
  border-bottom: 2px solid var(--blue1);
  border-radius: 6px 6px 0 0;
}
.days-selection > div:hover {
  background-color: var(--blue2);
  color: var(--white);
  border-radius: 6px;
  border-bottom: 2px solid var(--blue1);
}
.days-selection > div.current-day:hover {
  background-color: var(--red);
  color: var(--white);
  border-radius: 6px;
  border-bottom: 2px solid var(--white);
}
.days-selection div.current-day {
  color: var(--red);
  font-weight: bold;
  border-bottom: 2px solid var(--red);
}
::-webkit-scrollbar {
  width: auto;
}
::-webkit-scrollbar-track {
  background: var(--blue3);
}
::-webkit-scrollbar-thumb {
  background-color: var(--blue2);
  border-radius: 20px;
  border: 3px solid var(--blue3);
}
.today-hourly {
  scrollbar-color: var(--blue2) var(--blue3);
  margin-top: 2rem;
  flex-wrap: nowrap;
  overflow-x: auto;
  width: 90vw;
  justify-self: center;
  justify-content: flex-start;
  gap: 1.8rem;
  box-sizing: border-box;
  padding: 1rem;
}
.today.main {
  justify-self: center;
  width: 60%;
  border: 3px solid var(--red);
  border-radius: 12px;
  align-self: center;
  padding: 1rem 2rem;
}
.hour-card {
  width: 7.4rem;
  flex-shrink: 0;
}

/* .error-page {
  position: fixed;
  top: var(--search_form_height);
  bottom: 0;
  left: 0;
  right: 0;
  background-color: var(--white);
  color: var(--red);
} */

